<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.shachindratripathi.layout_task1.MainActivity"
    android:weightSum="1">
    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignRight="@+id/textView19"
        android:layout_alignEnd="@+id/textView19"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />


    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_message"
        android:textColor="@color/colorAccent4"
        android:layout_marginTop="16dp"
        android:layout_below="@+id/toolbar"
        android:layout_alignLeft="@+id/textView7"
        android:layout_alignStart="@+id/textView7" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv7"
        android:layout_alignTop="@+id/tv_price"
        android:layout_alignLeft="@+id/textView9"
        android:layout_alignStart="@+id/textView9"
        android:layout_marginTop="8dp" />

    <TextView
        android:id="@+id/tv_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textView_price"
        android:layout_marginRight="38dp"
        android:layout_marginEnd="38dp"
        android:layout_below="@+id/textView6"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="8dp" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="23dp"
        android:textColor="@color/colorAccent4"
        android:text="@string/tv_des"
        android:layout_below="@+id/textView7"
        android:layout_alignLeft="@+id/textView11"
        android:layout_alignStart="@+id/textView11" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/lengthy_msg"
        android:layout_below="@+id/textView9"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="13dp"
        android:layout_marginStart="13dp" />


    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="23dp"
        android:textColor="@color/colorAccent4"
        android:text="@string/tv_package"
        android:layout_below="@+id/textView11"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView11"
        android:layout_alignStart="@+id/textView11"
        android:layout_below="@+id/textView12"
        android:layout_marginTop="27dp"
        android:textColor="@color/colorAccent4"
        android:text="@string/tv_duration" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorAccent4"
        android:text="@string/tv_price"
        android:layout_above="@+id/textView15"
        android:layout_alignRight="@+id/textView19"
        android:layout_alignEnd="@+id/textView19" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView13"
        android:layout_alignStart="@+id/textView13"
        android:layout_below="@+id/textView13"
        android:layout_marginTop="23dp"
        android:text="@string/tv_60" />

    <TextView
        android:id="@+id/textView16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:text="@string/tv_90"
        android:layout_below="@+id/textView15"
        android:layout_alignRight="@+id/textView15"
        android:layout_alignEnd="@+id/textView15" />

    <TextView
        android:id="@+id/textView17"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/tv_120"
        android:layout_below="@+id/textView16"
        android:layout_alignLeft="@+id/textView16"
        android:layout_alignStart="@+id/textView16" />

    <TextView
        android:id="@+id/textView18"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_$1"
        android:layout_alignBaseline="@+id/textView15"
        android:layout_alignBottom="@+id/textView15"
        android:layout_alignLeft="@+id/textView19"
        android:layout_alignStart="@+id/textView19" />

    <TextView
        android:id="@+id/textView19"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_$2"
        android:layout_above="@+id/textView17"
        android:layout_alignLeft="@+id/textView25"
        android:layout_alignStart="@+id/textView25" />

    <TextView
        android:id="@+id/textView25"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_$3"
        android:layout_alignBaseline="@+id/textView17"
        android:layout_alignBottom="@+id/textView17"
        android:layout_alignRight="@+id/button"
        android:layout_alignEnd="@+id/button" />

    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button"
        android:background="@color/colorAccent2"
        android:textColor="@color/colorAccent3"
        android:layout_marginBottom="12dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="8dp"
        android:layout_marginEnd="8dp"
        android:layout_alignLeft="@+id/textView17"
        android:layout_alignStart="@+id/textView17" />


</RelativeLayout>

